<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_white_1000">
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/md_white_1000">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/iv_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_back_black"
                    android:padding="@dimen/dp_16"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_news"
                    android:textSize="@dimen/text_size_action_bar"
                    android:textStyle="bold"
                    android:layout_toRightOf="@id/iv_back"
                    android:layout_marginLeft="@dimen/dp_8"
                    android:layout_marginTop="@dimen/dp_16"/>
            </RelativeLayout>
        </com.google.android.material.appbar.AppBarLayout>
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">
            <LinearLayout
                android:id="@+id/ly_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_16">
                    <ImageView
                        android:id="@+id/iv_image"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        app:srcCompat="@drawable/ic_image_grey"
                        android:scaleType="centerCrop"/>
                    <TextView
                        android:id="@+id/tv_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="@string/title_news"
                        android:textStyle="bold"
                        android:maxLines="2"
                        android:textSize="@dimen/text_size_large"
                        android:layout_toRightOf="@id/iv_image"
                        android:layout_marginLeft="@dimen/dp_16" />

                    <TextView
                        android:id="@+id/tv_author"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/author"
                        android:layout_below="@id/tv_title"
                        android:textSize="@dimen/text_size"
                        android:textColor="@color/md_grey_800"
                        android:layout_marginTop="@dimen/dp_4"
                        android:layout_marginLeft="@dimen/dp_16"
                        android:layout_toRightOf="@id/iv_image" />
                    <TextView
                        android:id="@+id/tv_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="@string/date"
                        android:layout_below="@id/tv_author"
                        android:textSize="@dimen/text_size_small"
                        android:textColor="@color/md_grey_600"
                        android:layout_marginLeft="@dimen/dp_16"
                        android:layout_alignParentRight="true" />
                </RelativeLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textSize="@dimen/text_size_large"
                    android:textStyle="bold"
                    android:layout_marginLeft="@dimen/dp_16"
                    android:layout_marginTop="@dimen/dp_8"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/md_grey_200"
                    android:layout_marginHorizontal="@dimen/dp_16"
                    android:layout_marginVertical="@dimen/dp_8"/>
                <TextView
                    android:id="@+id/tv_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="@string/lorem"
                    android:textColor="@color/md_grey_800"
                    android:layout_marginHorizontal="@dimen/dp_16"/>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">
                    <TextView
                        android:id="@+id/tv_url"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:text="@string/open_url"
                        android:textColor="@color/md_white_1000"
                        android:textStyle="bold"
                        android:textSize="@dimen/text_size_large"
                        android:background="@drawable/bg_primary"
                        android:gravity="center"
                        android:layout_margin="@dimen/dp_16"
                        android:layout_alignParentBottom="true"/>
                </RelativeLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        tools:visibility="visible"/>
</RelativeLayout>